# cmake-genexp-prop

./: .gitignore  CMakeLists.txt  README.md  f1.c  f2.c  main.c
